fix: Render CORS configuration